package ar.edu.utn.frba.dds.metamapa.models.entities.enums;

public enum Origen {
  DATASET,
  PROXY,
  CONTRIBUYENTE,
}
